--- a/WebContent/hello-world.xhtml
+++ b/WebContent/hello-world.xhtml
@@ -2,7 +2,7 @@
 <html lang="en"
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"	
-	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+	xmlns:a="http://xmlns.jcp.org/jsf/facelets">
 	
 	<h:head>
 		<title>Hello World - Input Form</title>
